<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/text_size_medium"
    android:gravity="center"
    tools:context=".ConclusionFragment">

    <!-- Title for the Conclusion -->
    <TextView
        android:id="@+id/conclusionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_of_expenses"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginBottom="@dimen/text_size_twenty" />

    <!-- Display the Daily Total Spending -->
    <TextView
        android:id="@+id/conclusionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="@dimen/text_small"
        android:layout_marginBottom="@dimen/text_size_small" />

    <!-- Display the Selected Date -->
    <TextView
        android:id="@+id/selectedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginBottom="@dimen/text_size_small" />

    <ImageView
        android:id="@+id/statusImageView"
        android:layout_width="@dimen/text_size_hundred"
        android:layout_height="@dimen/text_size_hundred"
        android:layout_marginTop="@dimen/text_size_twenty"
        android:layout_marginBottom="@dimen/text_size_twenty"
        android:contentDescription="@string/status_image" />

    <!-- Add a Button to go back -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="@dimen/text_small"
        android:textColor="@color/white"
        android:background="@drawable/button_background"/>
</LinearLayout>
