<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settingsFragment">

    <!-- Back and Settings Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size_small"
        android:background="@color/tone1"
        android:orientation="horizontal"
        android:padding="@dimen/text_size_eight"
        tools:ignore="ExtraText">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_backtohome"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_size_medium"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:backgroundTint="@color/white" />
        <!-- android:backgroundTint="@color/white" -->

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/Settings"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large" />

    </LinearLayout>

    <!-- Change Language Button -->
    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_lang"
        android:layout_marginBottom="@dimen/text_size_twele"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white" />

    <!-- Change Font Size Button -->
    <Button
        android:id="@+id/btnchangefontsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_font"
        android:layout_marginBottom="@dimen/text_size_twele"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white" />

    <!-- Delete Data Button -->
    <Button
        android:id="@+id/ID_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_date"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white" />

</LinearLayout>
