<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    tools:ignore="VisualLintBounds">

    <!-- ส่วน Header -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_size_eight"
                android:background="@color/tone1"
                android:orientation="horizontal"
                android:padding="@dimen/text_size_eight">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/pocket"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_size_thirty"
                android:layout_marginEnd="@dimen/text_size_thirty"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/searchBillText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/text_size_icons"
                    android:layout_marginBottom="@dimen/text_size_three"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/text_size_small"
                    android:hint="@string/search_bill"
                    android:padding="@dimen/text_size_small"
                    android:textColorHint="@color/Hint"
                    tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/text_size_three"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_calendar_month_24"
                    android:gravity="center"
                    android:hint="@string/Select_date"

                    android:padding="@dimen/text_size_small"
                    android:textColorHint="@color/Hint" />

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="305dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_size_three"
                android:background="@drawable/ic_calender_background"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:theme="@style/CalendarViewCustom"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

            <TextView
                android:id="@+id/History_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_size_thirty"
                android:layout_marginEnd="@dimen/text_size_thirty"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/history"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/tone1"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/history_list_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_size_thirty"
                android:layout_marginRight="@dimen/text_size_thirty"
                android:layout_marginBottom="@dimen/text_size_three"
                android:layout_weight="1"
                android:background="@drawable/border_background"
                android:orientation="vertical">

                <!-- ScrollView สำหรับรายการบิล -->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/text_size_three"
                    android:minHeight="@dimen/text_size_hundredtwe"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:id="@+id/history_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/w1_size">

                        <LinearLayout
                            android:id="@+id/Goal_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/w1_size">

                            <TextView
                                android:id="@+id/goal_message"
                                android:layout_width="@dimen/text_size_hunsixtyeig"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-smallcaps"
                                android:text="@string/goal_text"
                                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                android:textColor="@color/tone1"
                                android:textSize="@dimen/text_large" />

                            <EditText
                                android:id="@+id/goal_input"
                                android:layout_width="@dimen/text_size_hundred"
                                android:layout_height="match_parent"
                                android:layout_marginRight="@dimen/text_size_small"
                                android:background="@drawable/edittext_border"
                                android:gravity="center"
                                android:hint="@string/daily_goal_editText"
                                android:importantForAutofill="noExcludeDescendants"
                                android:inputType="numberDecimal"
                                android:textAlignment="center"
                                android:textColorHint="@color/Hint"
                                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


                            <Button
                                android:id="@+id/save_goal_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/text_size_eight"
                                android:background="@drawable/button_background"
                                android:gravity="center"
                                android:minWidth="@dimen/text_size_fortyeight"
                                android:minHeight="@dimen/text_size_fortyeight"
                                android:text="@string/save_goal"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                tools:ignore="SmallSp" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/no_transactions_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_size_thirty"
                            android:gravity="center"
                            android:text="@string/no_transactions_available"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_medium"
                            android:visibility="gone" />

                        <!-- รายการบิล -->
                        <LinearLayout
                            android:id="@+id/bill_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/text_size_twele"
                            android:orientation="vertical"
                            android:padding="@dimen/text_size_eight" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <ImageButton
                android:id="@+id/addTransactionButton"

                android:layout_width="@dimen/text_size_sixty"
                android:layout_height="@dimen/text_size_sixty"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/text_size_large"
                android:background="@drawable/button_background"
                android:contentDescription="@string/add_income"
                android:gravity="right"
                android:src="@drawable/ic_add"

                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/text_size_large"
                    android:layout_marginEnd="@dimen/text_size_large"
                    android:layout_marginBottom="@dimen/text_size_three"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/conclusionButton"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/button_background"
                        android:text="@string/conclusion"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <!-- CalendarView สำหรับเลือกวันที่ -->


</LinearLayout>